# cqlib

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .typos.toml  CODE_OF_CONDUCT.CN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.CN.md  CONTRIBUTING.md  Cargo.toml  README.CN.md  README.md  SECURITY.CN.md  SECURITY.md  pyproject.toml
crates/binding-c/: CMakeLists.txt  Cargo.toml  README.md  build.rs
crates/binding-c/examples/: main.c
crates/binding-c/src/: circuit.rs  device.rs  ir.rs  lib.rs  qis.rs
crates/binding-c/tests/: ffi_test.rs  test_c_abi.c  test_circuit.c  test_device.c  test_ir.c  test_qis.c
crates/binding-cpp/: CMakeLists.txt  Cargo.toml  README.md  build.rs
crates/binding-cpp/src/: lib.rs
crates/binding-cpp/tests/: test.cpp
crates/binding-python/: Cargo.toml  README.md  pyproject.toml
crates/binding-python/cqlib/: __init__.py  _native.pyi
crates/binding-python/cqlib/circuit/: __init__.py  __init__.pyi  bit.pyi  circuit.pyi  classical.pyi  classical_expr.pyi  control_flow.pyi  gates.py  gates.pyi  operation.pyi  parameter.pyi  symbolic_matrix.pyi
crates/binding-python/cqlib/circuit/ansatz/: __init__.py  __init__.pyi  facades.pyi  feature_map.pyi  hamiltonian_evolution.pyi  layers.pyi  qaoa.pyi  two_local.pyi
crates/binding-python/cqlib/circuit/gates/: __init__.py  __init__.pyi  circuit_gate.py  circuit_gate.pyi  control_flow.pyi  delay.pyi  directive.py  directive.pyi  mc_gate.py  mc_gate.pyi  standard.py  standard.pyi  unitary.py  unitary.pyi
crates/binding-python/cqlib/compile/: __init__.py  __init__.pyi  compiler.py  compiler.pyi
crates/binding-python/cqlib/compile/commutation/: __init__.py  __init__.pyi  checker.py  checker.pyi
crates/binding-python/cqlib/compile/knowledge/: __init__.py  __init__.pyi  library.py  library.pyi  matcher.py  matcher.pyi  rule.py  rule.pyi
crates/binding-python/cqlib/compile/resource/: __init__.py  __init__.pyi  manager.py  manager.pyi  model.py  model.pyi  policy.py  policy.pyi
crates/binding-python/cqlib/compile/sabre/: __init__.py  __init__.pyi  routing.py  routing.pyi
crates/binding-python/cqlib/compile/transform/: __init__.py  __init__.pyi  canonicalize.py  canonicalize.pyi  layout.py  layout.pyi  result.py  result.pyi  rewrite.py  rewrite.pyi  routing.py  routing.pyi
crates/binding-python/cqlib/compiler/: __init__.py  __init__.pyi
crates/binding-python/cqlib/device/: __init__.py  __init__.pyi  device_impl.pyi  layout.pyi  noise.pyi  qubit.pyi  result.pyi  topology.pyi
crates/binding-python/cqlib/error_mitigation/: __init__.py  __init__.pyi  unified.py  unified.pyi  virtual_distillation.py  virtual_distillation.pyi  zne.py  zne.pyi
crates/binding-python/cqlib/ir/: __init__.py  __init__.pyi  qasm2.py  qasm2.pyi  qasm3.py  qasm3.pyi  qcis.py  qcis.pyi
crates/binding-python/cqlib/qis/: __init__.py  __init__.pyi  entropy.py  entropy.pyi  evolution.py  evolution.pyi  hamiltonian.py  hamiltonian.pyi  metrics.py  metrics.pyi  pauli.py  pauli.pyi
crates/binding-python/cqlib/qis/state/: __init__.py  __init__.pyi  classical.py  classical.pyi  density_matrix.py  density_matrix.pyi  stabilizer.py  (+5 more)
crates/binding-python/cqlib/visualization/: __init__.py  __init__.pyi
crates/binding-python/src/: compile.rs  ir.rs  lib.rs  visualization.rs
crates/binding-python/src/circuit/: bit.rs  circuit.rs  circuit_impl.rs  circuit_to_matrix.rs  classical.rs  classical_expr.rs  control_flow.rs  error.rs  instruction.rs  mod.rs  operation.rs  parameter.rs  symbolic_matrix.rs
crates/binding-python/src/compile/: compiler.rs  error.rs  mod.rs
crates/binding-python/src/device/: common.rs  device_impl.rs  layout.rs  mod.rs  noise.rs  qubit.rs  result.rs  topology.rs
crates/binding-python/src/error_mitigation/: error.rs  mod.rs
crates/binding-python/src/ir/: mod.rs  qasm2.rs  qasm3.rs  qcis.rs
crates/binding-python/src/qis/: entropy.rs  evolution.rs  hamiltonian.rs  metrics.rs  mod.rs  pauli.rs
crates/binding-python/tests/: test_compile_transform.py  test_compile_transform_layout.py  test_compile_transform_routing.py  test_compile_workflow.py  test_error_mitigation.py  test_ir_qcis.py
crates/cqlib/: Cargo.toml  README.md
crates/cqlib-core/: Cargo.toml  README.md  build.rs
crates/cqlib-core/src/: lib.rs
crates/cqlib-core/src/circuit/: bit.rs  bit_test.rs  cfg.rs  cfg_test.rs  circuit.rs  circuit_classical.rs  circuit_impl.rs  circuit_param.rs  circuit_test.rs  circuit_to_matrix.rs  circuit_to_matrix_test.rs  circuit_verify.rs  classical.rs  dag.rs  dag_test.rs  depth.rs  error.rs  gate.rs  gate_matrix.rs  gate_matrix_test.rs  mod.rs  operation.rs  param.rs  parameter.rs  parameter_test.rs  symbolic_matrix.rs  symbolic_matrix_test.rs  value_instruction.rs
crates/cqlib-core/src/compile/: compile_test.rs  compiler.rs  error.rs  graph.rs  mod.rs  physical_target.rs  prepared.rs  structured.rs  workflow.rs  workflow_test.rs
crates/cqlib-core/src/compiler/: api.rs  api_test.rs  compile.rs  compile_test.rs  context.rs  error.rs  mod.rs  verify.rs  workflow.rs  workflow_test.rs
crates/cqlib-core/src/device/: device_impl.rs  device_test.rs  error.rs  instruction_set.rs  instruction_set_test.rs  layout.rs  layout_test.rs  mod.rs  noise.rs  qubit.rs  result.rs  result_test.rs  topology.rs  topology_test.rs
crates/cqlib-core/src/error_mitigation/: error.rs  error_mitigation_test.rs  mod.rs  unified.rs  virtual_distillation.rs  virtual_distillation_test.rs  zne_mitigation.rs  zne_mitigation_test.rs
crates/cqlib-core/src/ir/: mod.rs  qasm2_to_qcis_test.rs
crates/cqlib-core/src/qis/: density_matrix.rs  density_matrix_noise.rs  density_matrix_noise_test.rs  density_matrix_test.rs  entropy.rs  entropy_test.rs  error.rs  evolution.rs  evolution_test.rs  hamiltonian.rs  metrics.rs  metrics_test.rs  mod.rs  observable.rs  observable_test.rs  pauli.rs  pauli_test.rs  statevector.rs  statevector_test.rs
crates/cqlib-core/src/util/: aligned.rs  matrix.rs  mod.rs  operation.rs  qubit.rs  test_utils.rs
crates/cqlib-core/src/visualization/: mod.rs
crates/cqlib-core/tests/: test.rs
crates/cqlib/src/: lib.rs
(+705 files in other folders)
