[workspace]
members = [
    "crates/cqlib-core",
    "crates/binding-python",
    "crates/binding-c",
    "crates/cqlib",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
license-file = "LICENSE.txt"

[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
approx = "0.5"
cbindgen = "0.29.2"
lalrpop = "0.22"
lalrpop-util = "0.22"
indexmap = "2.12"
ndarray = { version = "0.16", features = ["rayon"] }
num = "0.4"
numpy = "0.27"
num-complex = "0.4"
rand = "0.9"
regex = "1.12.3"
rustworkx-core = "0.17"
smallvec = "1.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
uuid = { version = "1.19", features = ["v4", "serde"] }
