[workspace]
members = [
    "crates/cqlib-core",
    "crates/binding-python",
    "crates/binding-c",
    "crates/cqlib",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
license-file = "LICENSE.txt"

[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
approx = "0.5"
bitvec = "1.0.1"
cbindgen = "0.29.2"
faer = "0.24.0"
lalrpop = "0.22"
lalrpop-util = "0.22"
indexmap = "2.12"
ndarray = { version = "0.17", features = ["rayon"] }
num = "0.4"
numpy = "0.27"
num-complex = "0.4"
rayon = "1.11.0"
rand = "0.9"
regex = "1.12.3"
rustworkx-core = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1.15"
symb_anafis = "0.8.1"
thiserror = "2.0.18"
time = "0.3.47"
uuid = { version = "1.19", features = ["v4", "serde"] }
