[project]
name = "cqlib"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "maturin>=1.12.4",
    "numpy>=2.4.2",
]

[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "crates/binding-python/Cargo.toml"
python-source = "crates/binding-python"
module-name = "cqlib._native"
features = ["pyo3/extension-module"]


[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
