[package]
name = "binding-c"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
cqlib-core = { path = "../cqlib-core", version = "0.1.0" }
libc = "0.2"

[build-dependencies]
cbindgen.workspace = true
