[package]
name = "binding-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310", "num-complex"] }
cqlib-core = { path = "../cqlib-core", version = '0.1.0' }
num-complex.workspace = true
numpy.workspace = true
smallvec.workspace = true
