[package]
name = "cqlib-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The high-performance core foundation for the CQLib quantum computing ecosystem."
authors = ["Tianyan Quantum Group <tianyan@chinatelecom.cn >"]
homepage = "https://qc.zdxlz.com/"
repository = "https://gitee.com/cq-lib/cqlib"
documentation = "https://docs.rs/cqlib-core"
readme = "README.md"
keywords = [
    "quantum",
    "quantum_circuit",
    "quantum_computing",
    "quantum_programming",
    "physics",
]
categories = [
    "science",
    "simulation",
    "algorithms",
    "science::physics",
    "data-structures"
]

[dependencies]
approx.workspace = true
lalrpop-util = { workspace = true, features = ["lexer"] }
indexmap.workspace = true
ndarray.workspace = true
num.workspace = true
num-complex.workspace = true
regex.workspace = true
rustworkx-core.workspace = true
smallvec.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[build-dependencies]
lalrpop.workspace = true
