[package]
name = "cqlib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The high-performance core foundation for the CQLib quantum computing ecosystem."
authors = ["Tianyan Quantum Group <tianyan@chinatelecom.cn >"]
homepage = "https://qc.zdxlz.com/"
repository = "https://gitee.com/cq-lib/cqlib"
documentation = "https://docs.rs/cqlib-core"
readme = "README.md"
keywords = [
    "quantum",
    "quantum circuit",
    "quantum computing",
    "quantum programming language",
    "physics",
]
categories = [
    "science",
    "simulation",
    "algorithms",
    "science::physics",
    "data-structures"
]


[dependencies]
cqlib-core = { path = "../cqlib-core", version = "0.1.0" }
